security, unit tests and part of openapi docs added

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 
     <name>upday-pet-project</name>
 
-
     <properties>
         <kotlin.version>1.8.0</kotlin.version>
         <spring-boot.version>3.0.1</spring-boot.version>
@@ -22,13 +21,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
-    <!--    <properties>-->
-    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-    <!--        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
-    <!--        <java.version>11</java.version>-->
-    <!--        <kotlin.version>1.8.0</kotlin.version>-->
-    <!--    </properties>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -68,16 +60,16 @@
                     <args>
                         <arg>-Xjsr305=strict</arg>
                     </args>
-                    <compilerPlugins>
-                        <plugin>spring</plugin>
-                        <plugin>jpa</plugin>
-                        <plugin>all-open</plugin>
-                    </compilerPlugins>
-                    <pluginOptions>
-                        <option>all-open:annotation=jakarta.persistence.Entity</option>
-                        <option>all-open:annotation=jakarta.persistence.Embeddable</option>
-                        <option>all-open:annotation=jakarta.persistence.MappedSuperclass</option>
-                    </pluginOptions>
+<!--                    <compilerPlugins>-->
+<!--                        <plugin>spring</plugin>-->
+<!--                        <plugin>jpa</plugin>-->
+<!--                        <plugin>all-open</plugin>-->
+<!--                    </compilerPlugins>-->
+<!--                    <pluginOptions>-->
+<!--                        <option>all-open:annotation=jakarta.persistence.Entity</option>-->
+<!--                        <option>all-open:annotation=jakarta.persistence.Embeddable</option>-->
+<!--                        <option>all-open:annotation=jakarta.persistence.MappedSuperclass</option>-->
+<!--                    </pluginOptions>-->
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -130,11 +122,17 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
+            <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--        &lt;!&ndash; Spring Boot dependencies &ndash;&gt;-->
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk-jvm</artifactId>
+            <version>1.13.5</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Spring Boot dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -156,13 +154,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <!--        H2 database-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- H2 database-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
         </dependency>
-
+        <!-- OpenApi Docs -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
