--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-#spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions = true
 springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.root=INFO
+logging.level.web=INFO
